error_tests/unresolved_var/expected_error.txt
main.pt:2:10: error:
 2 |   return some_var;
   |          ~~~~~~~~
   |          unable to find this variable
